# Story

./: .replit  pyproject.toml  story.py
story.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
