[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["sxfigu19 <sxfigu19@harrisonburg.k12.va.us>"]
description = ""
name = "story"
version = "0.1.0"
[tool.poetry.dependencies]
pyfiglet = "^0.8.0"
python = "^3.7"
[tool.poetry.dev-dependencies]
